2.2.3/_sources/gallery/axes_grid1/simple_axes_divider3.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_axes_grid1_simple_axes_divider3.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axes_grid1_simple_axes_divider3.py:


=====================
Simple Axes Divider 3
=====================





.. image:: /gallery/axes_grid1/images/sphx_glr_simple_axes_divider3_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import mpl_toolkits.axes_grid1.axes_size as Size
    from mpl_toolkits.axes_grid1 import Divider
    import matplotlib.pyplot as plt


    fig1 = plt.figure(1, (5.5, 4))

    # the rect parameter will be ignore as we will set axes_locator
    rect = (0.1, 0.1, 0.8, 0.8)
    ax = [fig1.add_axes(rect, label="%d" % i) for i in range(4)]


    horiz = [Size.AxesX(ax[0]), Size.Fixed(.5), Size.AxesX(ax[1])]
    vert = [Size.AxesY(ax[0]), Size.Fixed(.5), Size.AxesY(ax[2])]

    # divide the axes rectangle into grid whose size is specified by horiz * vert
    divider = Divider(fig1, rect, horiz, vert, aspect=False)


    ax[0].set_axes_locator(divider.new_locator(nx=0, ny=0))
    ax[1].set_axes_locator(divider.new_locator(nx=2, ny=0))
    ax[2].set_axes_locator(divider.new_locator(nx=0, ny=2))
    ax[3].set_axes_locator(divider.new_locator(nx=2, ny=2))

    ax[0].set_xlim(0, 2)
    ax[1].set_xlim(0, 1)

    ax[0].set_ylim(0, 1)
    ax[2].set_ylim(0, 2)

    divider.set_aspect(1.)

    for ax1 in ax:
        ax1.tick_params(labelbottom=False, labelleft=False)

    plt.show()


.. _sphx_glr_download_gallery_axes_grid1_simple_axes_divider3.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_axes_divider3.py <simple_axes_divider3.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_axes_divider3.ipynb <simple_axes_divider3.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
